<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
     android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:background="#123456"
        android:id="@+id/left_focus_colleague"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <TextView
            android:text="focus colleague 1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="button1"
            android:id="@+id/button1"
            android:background="@drawable/button_background"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="fill_parent">
        <FrameLayout
            android:background="#234567"
            android:id="@+id/right_top_focus_colleague"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:text="focus colleague 2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:text="button2"
                    android:id="@+id/button2"
                    android:background="@drawable/button_background"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:layout_height="0dp"
                    android:layout_width="match_parent" />
                <Button
                    android:id="@+id/button3"
                    android:text="button3"
                    android:background="@drawable/button_background"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"  />
            </LinearLayout>
        </FrameLayout>
        <FrameLayout
            android:background="#345678"
            android:id="@+id/right_bottom_focus_colleague"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:text="focus colleague 2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:text="button4"
                    android:id="@+id/button4"
                    android:background="@drawable/button_background"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:layout_height="0dp"
                    android:layout_width="match_parent" />
                <Button
                    android:id="@+id/button5"
                    android:text="button5"
                    android:background="@drawable/button_background"
                    android:layout_weight="1"
                    android:layout_margin="16dp"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"  />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>